feat: support hyperliquid trading
- add Hyperliquid trader implementation and config schema
- introduce multi-exchange settings and test script
- adjust factory and docs for native symbol usage

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,5 +6,10 @@ OPENAI_API_KEY=your_deepseek_api_key_here
 BINANCE_API_KEY=your_binance_api_key_here
 BINANCE_API_SECRET=your_binance_api_secret_here
 
+# Hyperliquid Wallet Credentials
+HL_WALLET_ADDR=0xyour_hyperliquid_wallet_address
+HL_PRIVATE_KEY=0xyour_hyperliquid_private_key
+HL_USER_ADDR=0xyour_public_wallet_address
+
 # Database Configuration (SQLite)
 # DATABASE_URL=sqlite:///./alphatransformer.db  # This is the default
